mainpage.css
.posts-container {
    width: 100vw;
    display: flex;
    flex-flow: row wrap;
    /* justify-content: space-between; */
    margin: auto;
    background-color: #f4f7f6;
}
.post {
    display: flex;
    flex-direction: column;

    width: 23em;
    height: 26em;

    background-color: #fcfcfc;
    margin: 20px;
    border-radius: 1%;
}

.img-container {
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 65%;
}

.post-info {
    height: 35%;
    display: flex;
    flex-flow: column wrap;
    /* align-items: baseline; */
    justify-content: space-evenly;
}

.period {
    margin: 0 0 0 1em;
}

.title{
    margin: 0 auto;
    color: gray;
    font-size: 1.25em;
}

.title:hover {
    color: gray;
    text-decoration: underline;
}

.writer-info {
    display: flex;
    flex-direction: row;
    align-items: baseline;
}

.writer-info>.picture {
    overflow: hidden;
    width: 2em;
    height: 2em;
    border-radius: 100%;
    margin: 0 0 0 1em;
}

.writer-info>.picture>img {
    vertical-align:middle;
}

.writer-info>.name {
    margin: 0.5em;
}

img:hover{
    color: gray;
    text-decoration: underline;
    transform:scale(1.1); 
}

a {
    width: 100%;
    text-decoration: none;
}


img {
    width: 100%;
    height: auto;
}

